# ppcg

./: .gitmodules  CMakeLists.txt  ChangeLog  Dockerfile  compare_outputs.py  configure.ac  dummy.cpp  opencl_test.sh.in  ppcg.c  version.c
cmake/: FindGMP.cmake  FindLLVMClang.cmake
